--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
             - mysql
         command: >
             bash -c "composer install &&
-                   php artisan migrate:fresh --seed &&
+                   php artisan migrate --seed &&
                    npm install && 
                    npm run build &&
                    php artisan serve --host=0.0.0.0 --port=80"
@@ -59,8 +59,4 @@ networks:
         driver: bridge
 volumes:
     sail-mysql:
-        driver: local
-    sail-redis:
-        driver: local
-    sail-meilisearch:
         driver: local
